page3 bottom img

--- a/TheLoU page3 part1 00007 19.04.html
+++ b/TheLoU page3 part1 00007 19.04.html
@@ -15,8 +15,8 @@
                     color:rgb(255, 255, 255);
                     border: 0em;
                     margin: 0em;
-                    background-color: rgb(0, 0, 0);
-                    height: 44em;
+                    background-color: rgb(255, 0, 0) 84);
+                    height: 44.5em;
                     width: 80.8em;
                 }
                 a:visited {
@@ -164,7 +164,7 @@
                     color: rgb(255, 208, 0);
                 }
                 .maine_img {
-                    height: 45.4em;
+                    height: 44.5em;
                     width: 80.8em;
                 }
                 .text_elly {
@@ -194,9 +194,10 @@
                 .page2 {
                     position: relative;
                     color: #ffffff;
-                    height: 43em;
+                    height: 40em;
                     width: 80.8em;
                     background-color: rgb(0, 0, 0);
+                    border: 1px solid red;
                 }
                 /* .grad_bottom { 
                     height: 150px;
@@ -207,7 +208,15 @@
                     width: 80.8em;
                     height: 7%;
                     position: absolute;
-                    bottom: 0;
+                    top: 0;
+                }
+                .page3 {
+                    position: relative;
+                    color: #ffffff;
+                    height: 43em;
+                    width: 80.8em;
+                    background-color: rgb(0, 0, 0);
+                    border: 1px solid blue;
                 }
             </style>
         </head>
@@ -280,17 +289,17 @@
                                 out justice and find closure. As she hunts those responsible one by one, she is confronted 
                                 with the devastating physical and emotional repercussions of her actions.</p>
                         </div>
-                        <div>
-                            <img src="https://github.com/Andrii2203/TheLoU/blob/master/the-last-of-us-part-ii-top-texture-ps4-us-24aug19.png?raw=true" class="img_bottom_elly">
-                        </div>
                     <section>
                 </div>
             </div>
             <div>
-                <div>
+                <div class="page3">
                     <section>
                         <div>
-                            <img src="">
+                            <img src="https://github.com/Andrii2203/TheLoU/blob/master/the-last-of-us-part-ii-top-texture-ps4-us-24aug19.png?raw=true" class="img_bottom_elly">
+                        </div>
+                        <div>
+                            <img src="https://raw.githubusercontent.com/Andrii2203/TheLoU/master/the-last-of-us-part-ii-forest-bg-ps4-us-24aug19.jpg">
                         </div>
                     </section>
                 </div>
